--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
     "server": "0.0.0.0",
     "server_ipv6": "::",
-    "server_port": 8388,
+    "server_port": 9009,
     "local_address": "127.0.0.1",
     "local_port": 1080,
 
     "password": "m",
-    "method": "aes-128-ctr",
-    "protocol": "auth_aes128_md5",
+    "method": "aes-256-cfb",
+    "protocol": "auth_aes128_sha1",
     "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth_compatible",
+    "obfs": "http_post",
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": 0,
